# time-trace

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  development.md  usage.md
src/time_trace/: __init__.py  cli.py  command.py  elf_writer.py  perf_data_model.py  perf_writer.py  pipeline.py  reconstruct.py  sampling.py  trace_loader.py  trace_model.py
tests/: test_cli.py  test_command.py  test_cpp_samples_integration.py  test_perf_writer.py  test_pipeline.py  test_pipeline_integration.py  test_reconstruct.py  test_sampling.py  test_trace_loader.py
tests/cpp_samples/: ranges_pipeline.cpp  tiny_tuple.cpp  tuple_meta.cpp  variant_visit.cpp
tests/fixtures/: clang-trace.json
tests/support/: cpp_expectations.py  perf_checks.py
