[project]
name = "time-trace"
version = "0.1.0"
description = "Wrap clang time-trace output in a perf-friendly workflow"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
time-trace = "time_trace.cli:main"
"time-trace.py" = "time_trace.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.3",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/time_trace"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "C4",
  "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["time_trace"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "integration: exercises clang/perf end-to-end flow",
  "perf_samples: runs heavier C++ sample programs through perf report/script",
]
